# MA24_simulink

./: .gitignore  README.md  bus_definitions.m  casadi_fun_to_mex.m  daten_mpc_N_in_1ms_erhoehen.csv  daten_mpc_N_in_1ms_erhoehen_other_weight.csv  daten_mpc_Ts_in_1ms_erhoeht.csv  init_MPC_weights.asv  init_MPC_weights.m  matlab.mat  mpc_casadi_main.asv  mpc_casadi_main.m  package-lock.json  param_ct_traj_filter.m  param_visual.m  parameters.m  plot_tst.m  realtime_simu_franka_fr3.mat  replace_script.sh  s_functions.mexa64  set_sh_permissions.sh  sim_discrete_planar.slxc  trajectory_generation_ref_subsys.slx  trajectory_generation_ref_subsys_model_ref.slxc
1/: casadi_mpc_weights_fr3_no_hand_custom_list.json  casadi_mpc_weights_fr3_no_hand_simulink.json  client.js  ekf_settings.json  index.html  mpc_weights_crocoddyl.json
Copy_of_realtime_simu_franka_fr3_franka_emika_rtw/: Copy_of_realtime_simu_franka_fr3.cpp  Copy_of_realtime_simu_franka_fr3.h  Copy_of_realtime_simu_franka_fr3.mk  Copy_of_realtime_simu_franka_fr3_data.cpp  Copy_of_realtime_simu_franka_fr3_private.h  Copy_of_realtime_simu_franka_fr3_types.h  buildInfo.mat  builtin_typeid_types.h  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  ext_mode_types.h  multiword_types.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
MPC_shared_subsystems/: MPC1.slx  MPC1_nlpsol.slx  MPC1_nlpsol_qrqp.slx  MPC2_opti.slx  MPC3_nlpsol.slx  MPC3_nlpsol_ipopt.slx  MPC3_opti.slx  MPC4_nlpsol_ipopt.slx  MPC4_nlpsol_qrqp.slx  MPC4_opti.slx  MPC4_opti.slx.original  MPC5_nlpsol.slx  MPC5_nlpsol_qrqp.slx  MPC6_nlpsol_qrqp.slx  MPC7_nlpsol_qrqp.slx  MPC7_nlpsol_qrqp.slx.autosave
config_settings/: casadi_mpc_weights_fr3_no_hand.json  casadi_mpc_weights_fr3_no_hand_custom_list.json  casadi_mpc_weights_fr3_no_hand_simulink.json  ekf_settings.json  general_settings.json  mpc_weights_crocoddyl.json
main_c/: MPC8_matlab  MPC8_matlab.c  MPC8_matlab_old.c  Makefile  main_mpc_udp  main_mpc_udp.c  main_mpc_udp.h  mpc_udp_client  mpc_udp_client.c  sort_14_dim_poses.c  sort_7_dim_poses.c  test_client  test_client.c  test_udp_server  test_udp_server.c
main_franka/: cartesian_impedance_control
main_matlab/: brute_force_singularity.m  main_gen_sing_traj.m  mpc_casadi_main.m  parameters.m  parameters_2dof.m  parameters_7dof.m  singularity_main.m  thesis_plots.m
main_python/: data_to_visualization.py  main_crocoddyl.py  main_crocoddyl_2DOF.py  main_crocoddyl_7DOF.py  node_data_logger.py  run_python_main.sh  websocket_fr3.py
main_ros2/casadi_mpc/cpp_class_files/: CMakeLists.txt  Makefile  SourceFiles.cmake  main.cpp
main_ros2/casadi_mpc/cpp_class_files/include/: CasadiController.hpp  CasadiEKF.hpp  CasadiMPC.hpp  CommonBaseController.hpp  CommonBaseMPC.hpp  CrocoddylBaseIntegrator.hpp  CrocoddylController.hpp  CrocoddylMPC.hpp  CrocoddylMPCType.hpp  CustomQuaternionPlugin.h  FullSystemTorqueMapper.hpp  RobotModel.hpp  SharedMemory.hpp  SharedMemoryController.hpp  SignalFilter.hpp  TicToc.hpp  TrajectoryGenerator.hpp  WorkspaceController.hpp  casadi_controller_types.hpp  eigen_templates.hpp  error_flags.h  robot_data.hpp  trajectory_settings.hpp  workspace_controller_config.hpp
main_ros2/casadi_mpc/cpp_class_files/src/: CasadiController.cpp  CasadiEKF.cpp  CasadiMPC.cpp  CommonBaseController.cpp  CommonBaseMPC.cpp  CrocoddylController.cpp  CrocoddylMPC.cpp  FullSystemTorqueMapper.cpp  RobotModel.cpp  SharedMemory.cpp  SharedMemoryController.cpp  SignalFilter.cpp  TicToc.cpp  TrajectoryGenerator.cpp  WorkspaceController.cpp
main_ros2/casadi_mpc/generate_libraries/: CMakeLists.txt
main_ros2/cpp_pubsub/: CMakeLists.txt  package.xml
main_ros2/cpp_pubsub/launch/: franka.launch.py  gravity_comp.launch.py
main_ros2/cpp_pubsub/src/: franka_joint_state_subscriber.cpp  shared_memory.cpp  shared_memory.hpp
main_ros2/franka_ros2_ws/src/casadi_mpc_publisher/: CMakeLists.txt  package.xml
main_ros2/franka_ros2_ws/src/casadi_mpc_publisher/include/casadi_mpc_publisher/: casadi_mpc_publisher.hpp
main_ros2/franka_ros2_ws/src/casadi_mpc_publisher/src/: casadi_mpc_publisher.cpp
main_ros2/franka_ros2_ws/src/command_publisher/: CMakeLists.txt  package.xml
main_ros2/franka_ros2_ws/src/command_publisher/src/: command_publisher.cpp
main_ros2/franka_ros2_ws/src/franka_example_controllers/: CMakeLists.txt  UtilsLibraryFiles.cmake  franka_example_controllers.xml  package.xml
main_ros2/franka_ros2_ws/src/franka_example_controllers/include/franka_example_controllers/: common_base_controller.hpp  common_ros_base_controller.hpp  conventional_workspace_controller.hpp  move_to_start_example_controller.hpp  mpc_casadi_controller.hpp  mpc_controller.hpp  mpc_crocoddyl_controller.hpp  mpc_crocoddyl_controller_shm.hpp  mpc_crocoddyl_controller_shm_controller.hpp  mpc_pinocchio_controller.hpp  mpc_pinocchio_controller_shm.hpp
main_ros2/franka_ros2_ws/src/franka_example_controllers/src/: common_base_controller.cpp  common_ros_base_controller.cpp  conventional_workspace_controller.cpp  move_to_start_example_controller.cpp  mpc_casadi_controller.cpp  mpc_controller  mpc_controller.cpp  mpc_crocoddyl_controller.cpp  mpc_crocoddyl_controller_shm.cpp  mpc_crocoddyl_controller_shm_controller.cpp  mpc_pinocchio_controller.cpp  mpc_pinocchio_controller_shm.cpp  shared_memory.cpp  shared_memory.hpp
main_ros2/read_bin_data/: CMakeLists.txt  CasadiMPC  CasadiMPC.cpp  CasadiMPC.hpp  MPC10_addressdef.h  MPC10_param.h  MPC8_addressdef.h  MPC8_param.h  Makefile  build.sh  compile_shared.txt  main  main.cpp  readme.txt
main_ros2/read_bin_data/include/: CasadiController.hpp  CasadiMPC.hpp  FullSystemTorqueMapper.hpp  pinocchio_utils.hpp
main_ros2/read_bin_data/src/: CasadiController.cpp  CasadiMPC.cpp  FullSystemTorqueMapper.cpp  pinocchio_utils.cpp
main_simulink/: Visualization_FR3_shared_subsystem.slx  Visualization_ur5e_shared_subsystem.slx  controller_ref_subsys.slx  controller_ref_subsys.slx.original  dummy_control_subsys.slx  franka_fr3_no_hand_simscape_model_refsys.slx  (+18 more)
(+1383 files in other folders)
